# cpp-multiformats

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cpp-varint/: README.md  cpp-varint.h
varint/: CMakeLists.txt  varint.h
varint/tests/: varint_test.cpp
